FileWatch: Call the kauth helper to increase the inotify limit

Instead of just crashing via an assert

BUG: 347577